feat(auth): add endpoints for updating and retrieving user profile

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -54,3 +54,5 @@ pids
 userdashboard-a52a6-firebase-adminsdk-appop-bac16d3bf5.json
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+*.txt
+config
