--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0",
+    "mongodb": "^6.12.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
